<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailedMovieActivity"
    android:background="@color/primaryDarkColor"
    android:id="@+id/detail_layout_main">

    <ImageButton
        android:id="@+id/previous_activity_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="15dp"
        android:background="@drawable/ic_arrow_back_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_movie_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:background="@drawable/ic_add_gray"/>

    <Button
        android:id="@+id/delete_movie_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:background="@drawable/ic_delete_gray"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/detail_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:maxWidth="200dp"
        android:text="Title"
        android:textColor="@color/secondaryLightColor"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_activity_button" />

    <TextView
        android:id="@+id/detail_movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year_parentheses"
        android:textSize="20sp"
        android:textColor="@color/secondaryDarkColor"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintStart_toEndOf="@id/detail_movie_title"
        app:layout_constraintBottom_toBottomOf="@id/detail_movie_title"
        />

    <LinearLayout
        android:id="@+id/detail_movie_user_score_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/previous_activity_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/detail_your_score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gary"
            android:text="Your Score:"
            android:textSize="17sp"/>

        <LinearLayout
            android:id="@+id/detail_user_score_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_movie_star_golden"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_star_golden"/>

            <EditText
                android:id="@+id/detail_movie_user_score_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="0"
                android:textColorHint="@color/gary"
                android:textColor="@color/secondaryLightColor"
                android:textSize="17sp"
                android:paddingStart="2dp"
                android:padding="0dp"
                />
            <TextView
                android:id="@+id/detail_movie_user_score_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryLightColor"
                android:text="10"
                android:textSize="20sp"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondaryDarkColor"
                android:text="/10"
                android:textSize="17sp"/>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/detail_movie_information_scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_title">

        <LinearLayout
            android:id="@+id/detail_movie_information_linear_view"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/detail_movie_poster"
                android:layout_width="300dp"
                android:layout_height="400dp"
                android:src="@drawable/default_image" />

            <LinearLayout
                android:id="@+id/detail_about_movie_linear_view"
                android:layout_marginTop="10dp"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/secondaryLightColor">

                <TextView
                    android:id="@+id/detail_movie_director"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director" />

                <TextView
                    android:id="@+id/detail_movie_writer"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/writer" />

                <TextView
                    android:id="@+id/detail_movie_country"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/county" />

                <TextView
                    android:id="@+id/detail_movie_released"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/released" />

                <TextView
                    android:id="@+id/detail_movie_box_office"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boxOffice" />

                <TextView
                    android:id="@+id/detail_movie_runtime"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime" />

                <TextView
                    android:id="@+id/detail_movie_genre"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/detail_movie_awards"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/awards" />

                <TextView
                    android:id="@+id/detail_movie_rating"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ratingIMDB" />

                <TextView
                    android:id="@+id/detail_movie_stars"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stars" />

                <TextView
                    android:id="@+id/detail_movie_plot"
                    style="@style/detailMovieDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot"
                    />



            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>