<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryLightColor"
    tools:context=".ui.MainActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_information_main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:background="@color/primaryDarkColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/movie_title_text_view"
            android:layout_width="00dp"
            android:layout_height="wrap_content"
            android:text="Title:"
            android:textColor="@color/secondaryLightColor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:maxWidth="200dp"
            android:layout_marginStart="20dp"
            android:textSize="25sp"
            />

        <TextView
            android:id="@+id/movie_year_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_parentheses"
            android:textSize="20sp"
            android:textColor="@color/secondaryLightColor"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintStart_toEndOf="@id/movie_title_text_view"
            app:layout_constraintBottom_toBottomOf="@id/movie_title_text_view"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="@id/movie_rating_text_view"
            app:layout_constraintEnd_toStartOf="@id/movie_rating_text_view"
            android:background="@drawable/ic_star_golden"/>

        <TextView
            android:id="@+id/movie_rating_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="40dp"
            android:text="9.2"
            android:textSize="25sp"
            android:textColor="@color/secondaryLightColor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/movie_rating_text_view"
            app:layout_constraintStart_toEndOf="@id/movie_rating_text_view"
            android:text="/10"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="20sp"
            android:layout_marginBottom="1dp"/>

        <ImageView
            android:id="@+id/movie_poster_image_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:src="@drawable/default_image"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/movie_title_text_view"
            app:layout_constraintBottom_toTopOf="@id/movie_information_scroll_view"/>

        <ScrollView
            android:id="@+id/movie_information_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/secondaryLightColor"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            >

            <LinearLayout
                android:id="@+id/movie_information_linear"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="vertical"
                android:padding="10dp"
                >


                <TextView
                    android:id="@+id/movie_director_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/movie_writer_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/writer"
                    android:textColor="@color/primaryDarkColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/movie_stars_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/primaryDarkColor"

                    android:text="@string/stars"
                    android:textSize="20sp" />


            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>